--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "element-ui": "^2.15.6",
     "iview": "^3.5.4",
+    "qs.js": "^0.1.12",
     "vue": "^2.5.2",
+    "vue-axios": "^3.4.0",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
