--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ server.port= 8000
 
 mybatis-plus.configuration.map-underscore-to-camel-case= true
 mybatis-plus.configuration.auto-mapping-behavior= full
-log-impl= org.apache.ibatis.logging.stdout.StdOutImpl
+mybatis-plus.configuration.log-impl= org.apache.ibatis.logging.stdout.StdOutImpl
 mapper-locations= classpath*:mapper/**/*Mapper.xml
 mybatis-plus.global-config.db-config.logic-delete-value= 1
 mybatis-plus.global-config.db-config.logic-not-delete-value= 0
